# infinite-errors

./: Cargo.toml  README.md
infinite-errors/: Cargo.toml
infinite-errors-macros/: Cargo.toml
infinite-errors-macros/src/: lib.rs  test.rs
infinite-errors/src/: lib.rs  test.rs
infinite-errors/tests/: err_context.rs
infinite-tracing/: Cargo.toml  README.md
infinite-tracing-macro/: Cargo.toml  README.md
infinite-tracing-macro/examples/: infinite-tracing-macro-prototype.rs
infinite-tracing-macro/src/: lib.rs  parameters.rs  tracing_impl.rs
infinite-tracing-macro/tests/: common.rs  infinite-tracing-macro-usage-api.rs
infinite-tracing-macro/tests/common/: mod.rs
infinite-tracing/benches/: tracers.rs
infinite-tracing/examples/: infinite-tracing-demo.rs
infinite-tracing/src/: features.rs  lib.rs  minitrace_glue.rs  structured_logger_glue.rs
