[package]
name = "infinite-errors-macros"
description = "Generic error handling framework with static backtraces. Proc macro package"
authors = ["cloudwalk.io"]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cloudwalk/infinite-errors"
keywords = ["error", "chain", "context"]
categories = ["development-tools::debugging"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.78", default-features = false, features = ["proc-macro"] }
quote = { version = "1.0.35", default-features = false }
syn = { version = "2.0.51", default-features = false, features = ["full", "parsing", "printing"]}

[dev-dependencies]
pretty_assertions = { version = "1.4.0", default-features = false, features = ["std"] }
