[package]
name = "infinite-errors"
description = "Generic error handling framework with static backtraces"
authors = ["cloudwalk.io"]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cloudwalk/infinite-errors"
keywords = ["error", "chain", "context"]
categories = ["development-tools::debugging"]

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["error"] }
infinite-errors-macros = { version = "0.2.0", path = "../infinite-errors-macros" }

[dev-dependencies]
assert_matches = { version = "1.5.0", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["display", "from"] }
futures-executor = { version = "0.3.30", default-features = false, features = ["std"] }
