[package]
name = "infinite-tracing-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = [
    "full",
    "parsing",
    "extra-traits",
    "proc-macro",
    "visit-mut",
    "visit",
    "fold",
    "printing",
] }


[dev-dependencies]

log = "0.4"
infinite-tracing = { path = "../infinite-tracing" }
minitrace = { version = "*", features = ["enable"] }
logcall = { git = "https://github.com/cloudwalk/logcall", branch = "log_inputs" }

once_cell = "1.19.0"
parking_lot = "0.12"

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = "0.4"
uuid = { version = "1.7", features = ["v4"] }
trybuild = "1"
async-trait = "0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
